# tree-sitter-lambdalus

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-lambdalus.pc.in
bindings/c/tree_sitter/: tree-sitter-lambdalus.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lambdalus/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLambdalusTests/: TreeSitterLambdalusTests.swift
examples/: basic.lambdalus  test.lambdalus
src/: grammar.json  node-types.json  parser.c
